# pyatnashki

./: CMakeLists.txt  README.md  field.cpp  field.h  image.cpp  image.h  level.h  main.cpp  shuffler.h
src/: field.cpp  field.h  image.h  level.cpp  main.cpp  shuffler.cpp  shuffler.h
src/ui/: component.h  interface.cpp  interface.h  ui_text.cpp  ui_text.h
